# delaunay-viewer

./: .gitignore  CMakeLists.txt  Changelog.txt  LICENSE  README.md
.github/workflows/: build.yml  packaging.yml  travis.yml
cmake/config/: compiler_options.cmake
examples/: Constrained-Sweden.cdt  SOURCE.md  bird.cdt  icons8-homer-simpson_source.txt
src/apps/delaunay_viewer/: CMakeLists.txt
src/apps/delaunay_viewer/src/: about_window.cpp  draw_shapes.h  drawing_options.h  dt_tracker.h  embedded_file.cpp  embedded_file.h  font_files.cpp  font_files.h  gui_style.cpp  main.cpp  project.h  project_defines.h.in  renderer.cpp  renderer.h  settings.cpp  settings.h  shape_control_window.cpp  shape_control_window.h  viewport_window.cpp
src/dt/: CMakeLists.txt
src/dt/include/dt/: dt_impl.h  dt_interface.h  proximity_graphs.h
src/dt/src/: cdt_wrap.h  dt_impl.cpp  dt_interface.cpp  impl_cdt.cpp  impl_cdt.h  impl_poly2tri.cpp  impl_poly2tri.h  impl_triangle.h
src/graphs/: CMakeLists.txt
src/graphs/include/graphs/: graph.h  graph_algos.h  index.h  proximity.h  triangulation.h  union_find.h
src/gui/: CMakeLists.txt
src/gui/abstract/: CMakeLists.txt
src/gui/abstract/include/gui/abstract/: canvas.h  color_data.h  window_layout.h
src/gui/base/: CMakeLists.txt
src/gui/base/include/base/: canvas.h  color_data.h  opengl_and_glfw.h  pfd_wrap.h  window_layout.h
src/gui/base/include/gui/base/: opengl_and_glfw.h
src/gui/base/src/: opengl_and_glfw.cpp  pfd_wrap.cpp
src/gui/gl3w/: CMakeLists.txt  README.md
src/gui/gl3w/include/GL/: gl3w.h  glcorearb.h
src/gui/gl3w/src/: gl3w.c
src/gui/imgui/: CMakeLists.txt
src/gui/imgui/include/config/: imgui_config.h
src/gui/imgui/include/imgui/: font_mngr.h  imgui.h  imgui_context.h  key_shortcut.h
src/gui/imgui/src/: font_mngr.cpp  imgui_context.cpp  imgui_context_impl.cpp  imgui_context_impl.h  imgui_helpers.cpp  key_shortcut.cpp
src/gui/src/: about_window.h  canvas.h  draw_command.h  draw_shape.cpp  draw_shape.h  draw_shapes.h  drawing_options.h  drawing_settings.cpp  drawing_settings.h  gui_style.h  imgui_draw_list.cpp  imgui_draw_list.h  imgui_helpers.cpp  imgui_helpers.h  main.cpp  opengl_and_glfw.cpp  opengl_and_glfw.h  opengl_draw_list.cpp  opengl_draw_list.h  parameter.h  pfd_wrap.cpp  pfd_wrap.h  project.cpp  project.h  project.h.in  project_defines.h.in  renderer.cpp  renderer.h  renderer_helpers.cpp  renderer_helpers.h  settings.cpp  settings.h  settings_window.cpp  settings_window.h  shaders.h  shape_control_window.cpp  shape_control_window.h  shape_draw_window.cpp  shape_draw_window.h  style.cpp  (+6 more)
src/lin/: CMakeLists.txt
src/lin/include/lin/: mat.h  vect.h
src/shapes/: CMakeLists.txt
src/shapes/include/shapes/: bezier.h  bounding_box.h  bounding_box_algos.h  comparison.h  conversion.h  edge.h  io.h  path.h  path_algos.h  point.h  point_cloud.h  proximity_graphs.h  sampling.h  sampling_interface.h  shapes.h  soup.h  traits.h  triangle.h  triangle_algos.h  vect.h
src/shapes/src/: bounding_box.cpp  io.cpp  path.cpp  point.cpp  point_cloud.cpp  vect.cpp
src/stdutils/: CMakeLists.txt
src/stdutils/include/stdutils/: algorithm.h  chrono.h  constants.h  endianness.h  enum.h  io.h  locked_buffer.h  memory.h  numbers.h  parameter.h  platform.h  range.h  span.h  stats.h  string.h  testing.h  time.h  trace_file.h  visit.h
src/stdutils/src/: io.cpp  platform.cpp  platform_macos.h  platform_macos.m  string.cpp  time.cpp
src/svg/: CMakeLists.txt
src/svg/include/svg/: svg.h
src/svg/src/: svg.cpp
src/svg/src/ssvg/: ssvg_init.cpp  ssvg_init.h
src/tests/graphs/: CMakeLists.txt
src/tests/graphs/src/: test_graphs.cpp
src/tests/lin/: CMakeLists.txt
src/tests/lin/src/: test_mat.cpp
src/tests/shapes/: CMakeLists.txt
src/tests/shapes/src/: test_bounding_box.cpp  test_graphs.cpp  test_sampling.cpp  test_shapes.cpp  test_union_find.cpp  test_vect.cpp  trace.cpp  trace.h.in
src/tests/shapes/trace/sampling/: cbp_sampling_casteljau.txt  cbp_sampling_path_uniformity_stats.txt
src/tests/stdutils/: CMakeLists.txt
src/tests/stdutils/src/: test_algorithm.cpp  test_enum.cpp  test_io.cpp  test_locked_buffer.cpp  test_memory.cpp  test_platform.cpp  test_range.cpp  test_span.cpp  test_stats.cpp  test_string.cpp  test_testing.cpp  test_type_traits.cpp
